Fixed Agenda Time wrapping
(cherry picked from commit 63607ad5415e9a900696a32933551c27e336784c)

--- a/frontend/src/Calendar/Agenda/AgendaEvent.css
+++ b/frontend/src/Calendar/Agenda/AgendaEvent.css
@@ -29,7 +29,7 @@
 }
 
 .time {
-  flex: 0 0 120px;
+  flex: 0 0 125px;
   margin-right: 10px;
   border: none !important;
 }
